
Others:
- Fixed halos for enemy units
- Fixed unloaded units sliding bug
- Fixed units failing to unload + fixed unload through cliffs
- Added "Bloom Shader" widget (default off)
- Map-info widget displays map size aswell
- Renamed "HighlightSelectedUnits widget: added spaces (widget will be enabled again if you had it disabled)


9.12 -> 9.13
30/10/2015

Balance changes:
- Buzzsaw and Vulcan are having "hold fire" by default
- Buildtime increased by 15% for advanced fusions
- T2 Missile ships accelerating a little bit faster
- Adv crawling bomb is moving faster (1.75 -> 2.8)
- Pyro have 5% less HP
- Termite metal cost decreased by 10%
- Sea to air torpedo launchers are removed

Others:
- Added "Commands info" widget
- Resurrection halos for enemy units too
- Removed groundplate from the factorries decals + nanos have a decal again
- Added "Pause/Unpause sounds" widget (disabled by default)
- "Shadow Quality Manager" widget has new max quality: 6k (was 8k) and low: 3k (was 2k)
- "LockCamera widget" removed (became obsolete, advplayerlist has it already)
- "commands FX" adjusted appearance slightly (more subtle)
- Removed "Meowl" mascotte
- Removed redUI minimap border


9.11 -> 9.12
23/10/2015

Balance changes:
- Increase cost of Annihilator by 10%
- Increase cost of Doomsday Machine by 15%
- Bigger blow radius for air cons (128 -> 160)
- Intruder (core t2 vech transport) HP increased (12 500 -> 20 000)
- Air transports are harder to EMP
- Cost of T1 and T2 land bombers decreased by 5%
- Dominator's reload time increased (7 -> 8) and damage (750 -> 800)
- Partially restore old dgun behaviour, now dgun will stick to ground (not water surface)

Others:
- redUI tooltip: added "/unitcounter". See total units on map (note: as player its just your teams total units)
- Advplayerlist: added "/cputext". Shows cpu usage in % instead of the icon
- Added new widget "gui_transport_weight_limit" - when pressing Load command, it highlights units the transport can lift