@@ -1340,8 +1340,8 @@ function CreateBackground()
 		gl_Color(0,0,0,0.6)
 		RectRound(BLcornerX,BLcornerY,TRcornerX,TRcornerY,6)
 		
-		local padding = 4
-		gl_Color(1,1,1,0.04)
+		local padding = 2.5
+		gl_Color(1,1,1,0.035)
 		RectRound(BLcornerX+padding,BLcornerY+padding,TRcornerX-padding,TRcornerY-padding,padding)
 		
 		--DrawRect(BLcornerX,BLcornerY,TRcornerX,TRcornerY)
