@@ -55,7 +55,7 @@ local bar					= imageDirectory.."bar.png"
 local bgcorner				= ":n:"..LUAUI_DIRNAME.."Images/bgcorner.png"
 local bgcornerSize			= 8
 
-local bordercolor = {1,1,1,0.04}
+local bordercolor = {1,1,1,0.035}
 local displayList
 local staticList
 local vsx, vsy = 0,0
@@ -213,7 +213,7 @@ local function updateStatics()
     gl.Color(0.0, 0.0, 0.0, 0.6)
     RectRound(x1-(BAR_MARGIN/1.75), y1-BAR_MARGIN, x1+w+(BAR_MARGIN/1.75), y1+h+BAR_MARGIN, bgcornerSize)
     
-    local padding = bgcornerSize*0.8
+    local padding = bgcornerSize*0.5
     gl.Color(bordercolor)
     RectRound(x1-(BAR_MARGIN/1.75)+padding, y1-BAR_MARGIN+padding, x1+w+(BAR_MARGIN/1.75)-padding, y1+h+BAR_MARGIN-padding, padding)
     
