@@ -28,7 +28,7 @@ local Config = {
 		margin = 5, --distance from background border
 		
 		padding = 4, -- for border effect
-		color2 = {1,1,1,0.04}, -- for border effect
+		color2 = {1,1,1,0.035}, -- for border effect
 		
 		expensefadetime = 0.25, --fade effect time, in seconds
 		
@@ -66,7 +66,7 @@ local Config = {
 		margin = 5,
 		
 		padding = 4, -- for border effect
-		color2 = {1,1,1,0.04}, -- for border effect
+		color2 = {1,1,1,0.035}, -- for border effect
 		
 		expensefadetime = 0.25,
 		
