@@ -262,6 +262,9 @@ function createBackgroundList()
 	end
 	backgroundList = glCreateList( function()
 		RectRound(xPos,yPos,xPos+panelWidth,yPos+panelHeight,6)
+		local borderPadding = 3.5
+		glColor(1,1,1,0.035)
+		RectRound(xPos+borderPadding,yPos+borderPadding,xPos+panelWidth-borderPadding,yPos+panelHeight-borderPadding,5)
 		local text = 'Catching up...'
 		local width = glGetTextWidth(text)*(panelHeight/3)
 		glText('\255\255\255\255'..text, xPos+(panelHeight*bgmargin), yPos+(panelHeight*bgmargin), panelHeight/3, 'o')
